# rtic-template

./: Cargo.toml  Embed.toml  README.md  memory.x  openocd.gdb
.cargo/: config.toml
examples/: blink.rs
src/: lib.rs  main.rs
