# My custom template based on the rust-embedded quickstart -
# https://github.com/rust-embedded/cortex-m-quickstart
# It is configured to work with the black pill v1.2 (STM32f401CCU6)

[package]
authors = ["{{authors}}"]
edition = "2018"
readme = "README.md"
name = "{{project-name}}"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "0.2"
panic-semihosting = "0.6.0"
cortex-m-rtic = "1.1.3"
embedded-hal = "0.2"

[dependencies.stm32f4]
version = "0.15.1"
features = ["stm32f401"]

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f401"]

[[bin]]
name = "{{project-name}}"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
