# My custom template based on the rust-embedded quickstart -
# https://github.com/rust-embedded/cortex-m-quickstart
# It is configured to work with the black pill v1.2 (STM32f401CCU6)

[package]
authors = ["{{authors}}"]
edition = "2018"
readme = "README.md"
name = "{{project-name}}"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
panic-halt = "0.2"
panic-probe = { version = "0.3"  , features = ["print-defmt"] }
cortex-m-rtic = "1.1.4"
embedded-hal = "1.0"

fugit = "0.3"
defmt = "0.3"
defmt-rtt = "0.4"

[dependencies.stm32f4]
version = "0.15.1"
features = ["stm32f401"]

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f401"]

[[bin]]
name = "{{project-name}}"
test = false
bench = false

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
